--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <svg class="user-nav__icon">
                             <use xlink:href="img/sprite.svg#icon-chat"></use>
                         </svg>
-                        <span class="user-nava__notification">13</span>
+                        <span class="user-nav__notification">13</span>
                     </div>
                     <div class="user-nav__user">
                         <img src="img/user.jpg " alt="User Photo" class="user-nav__user-photo">
